--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ flake8-black = "^0.2.0"
 flake8-quotes = "^3.4.0"
 pytest-cov = "^6.0.0"
 pytest-dependency = "^0.6.0"
+jinja2 = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.8"]
